@@ -1,6 +1,6 @@
 Package: IntEREst
 Title: Intron-Exon Retention Estimator
-Version: 1.7.2
+Version: 1.7.3
 Date: 2016-12-15
 Author: Ali Oghabian <Ali.Oghabian@Helsinki.Fi>, Dario Greco
         <dario.greco@helsinki.fi>, Mikko Frilander
